--- a/style.css
+++ b/style.css
@@ -55,6 +55,14 @@ width: 120px;
 .ex-6-img:hover{
     filter: grayscale();
 }
+
+.ex-7-img{
+    transition: filter 2s;
+}
+.ex-7-img:hover{
+    filter: grayscale();
+}
+
 .ex-8-img {
     transition: 2s;
 }
@@ -76,10 +84,42 @@ transform: scale(1.5);
 
 .ex-10-icon {
     font-size: 60px;
+    animation: rotation 1s linear infinite reverse;
 }
+
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+
 .ex-11-icon {
     font-size: 60px;
 }
+
+.ex-11-icon:hover{
+    animation: rotation_1 1s linear 1;
+}
+
+@keyframes rotation_1{
+    0% {
+        transform: rotate(0deg);
+    }
+    65%{
+        transform: rotate(270deg);
+    }
+    75%{
+        transform: rotate(270deg);
+    }
+    100%{
+        transform: rotate(0deg);
+    }
+}
+
 .ex-12-button, .ex-13-button {
     position: relative;
     display: block;
@@ -101,6 +141,7 @@ transform: scale(1.5);
     width: 60px;
     height: 20px;
 }
+
 .ex-12-bottom-white, .ex-13-bottom-white {
     position: absolute;
     bottom: -10px;
@@ -108,4 +149,91 @@ transform: scale(1.5);
     background: #f5f5f5;
     width: 60px;
     height: 20px;
+}
+
+.ex-12-button:hover .ex-12-top-white{
+    animation: X_translation 2s linear 1;
+}
+.ex-12-button:hover .ex-12-bottom-white{
+    animation: X_translation_2 2s linear 1;
+}
+
+.ex-13-button:hover .ex-13-top-white{
+    animation: translation_3 3s linear 1;
+}
+
+.ex-13-button:hover .ex-13-bottom-white{
+    animation: translation_4 3s linear 1;
+}
+
+@keyframes X_translation{
+    0% {
+        transform: translateX(0px);
+    }
+    45%{
+        transform: translateX(116px);
+    }
+    55%{
+        transform: translateX(116px);
+    }
+    100%{
+        transform: translateX(0px);
+    }
+}
+
+@keyframes X_translation_2{
+    0% {
+        transform: translateX(0px);
+    }
+    45%{
+        transform: translateX(-96px);
+    }
+    55%{
+        transform: translateX(-96px);
+    }
+    100%{
+        transform: translateX(0px);
+    }
+}
+
+@keyframes translation_3{
+    0% {
+        transform: translate(0px, 0px);
+    }
+    20%{
+        transform: translate(150px, 0px);
+    }
+    40%{
+        transform: translate(150px, 70px);
+    }
+    60%{
+        transform: translate(-50px, 70px);
+    }
+    80%{
+        transform: translate(-50px, 0px);
+    }
+    100%{
+        transform: translate(0px, 0px);
+    }
+}
+
+@keyframes translation_4{
+    0% {
+        transform: translate(0px, 0px);
+    }
+    20%{
+        transform: translate(-130px, 0px);
+    }
+    40%{
+        transform: translate(-130px, -70px);
+    }
+    60%{
+        transform: translate(70px, -70px);
+    }
+    80%{
+        transform: translate(70px, 0px);
+    }
+    100%{
+        transform: translate(0px, 0px);
+    }
 }
